--- a/app/src/main/res/menu/menu_bottom_bar.xml
+++ b/app/src/main/res/menu/menu_bottom_bar.xml
@@ -3,10 +3,21 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/app_bar_fav"
-        android:icon="@drawable/ic_favourite_menu"
-        android:title="@string/favourite"
-        app:showAsAction="ifRoom" />
+        android:id="@+id/app_bar_theme"
+        android:icon="@drawable/ic_eye"
+        android:title="@string/theme"
+        app:showAsAction="ifRoom">
+        <menu>
+            <item
+                android:id="@+id/theme_steel"
+                android:title="@string/theme_steel_desc"
+                app:showAsAction="ifRoom" />
+            <item
+                android:id="@+id/theme_copper"
+                android:title="@string/theme_copper_desc"
+                app:showAsAction="ifRoom" />
+        </menu>
+    </item>
 
     <item
         android:id="@+id/app_bar_settings"
