--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,7 +1,13 @@
 <resources xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
 
-    <style name="Theme.Base" parent="Theme.MaterialComponents.DayNight.NoActionBar" />
+    <style name="Theme.Base" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+        <item name="android:textViewStyle">@style/TextViewFont</item>
+    </style>
+
+    <style name="TextViewFont" parent="android:Widget.TextView">
+        <item name="android:fontFamily">@font/chintzy</item>
+    </style>
 
     <style name="Theme.Steel" parent="Theme.Base">
         <item name="colorPrimary">@color/steelPrimaryColor</item>
