--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,15 +1,41 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.POTD" parent="Theme.MaterialComponents.DayNight.NoActionBar">
-        <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/white</item>
-        <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">@color/black</item>
-        <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+
+    <style name="Theme.Base" parent="Theme.MaterialComponents.DayNight.NoActionBar" />
+
+    <style name="Theme.Steel" parent="Theme.Base">
+        <item name="colorPrimary">@color/steelPrimaryColor</item>
+        <item name="colorPrimaryVariant">@color/steelPrimaryDarkColor</item>
+        <item name="colorOnPrimary">@color/steelPrimaryTextColor</item>
+
+        <item name="colorSecondary">@color/steelSecondaryColor</item>
+        <item name="colorSecondaryVariant">@color/steelSecondaryDarkColor</item>
+        <item name="colorOnSecondary">@color/steelSecondaryTextColor</item>
+
+        <item name="chipStyle">@style/SteelChip</item>
     </style>
+
+    <style name="SteelChip" parent="Widget.MaterialComponents.Chip.Filter">
+        <item name="chipBackgroundColor">@color/steelPrimaryDarkColor</item>
+        <item name="chipCornerRadius">10dp</item>
+    </style>
+
+    <style name="Theme.Copper" parent="Theme.Base">
+        <item name="colorPrimary">@color/copperPrimaryColor</item>
+        <item name="colorPrimaryVariant">@color/copperPrimaryDarkColor</item>
+        <item name="colorOnPrimary">@color/copperPrimaryTextColor</item>
+
+        <item name="colorSecondary">@color/copperSecondaryColor</item>
+        <item name="colorSecondaryVariant">@color/copperSecondaryDarkColor</item>
+        <item name="colorOnSecondary">@color/copperSecondaryTextColor</item>
+
+        <item name="chipStyle">@style/CopperChip</item>
+    </style>
+
+    <style name="CopperChip" parent="Widget.MaterialComponents.Chip.Filter">
+        <item name="chipBackgroundColor">@color/copperPrimaryColor</item>
+        <item name="chipCornerRadius">10dp</item>
+    </style>
+
+    <style name="Theme.Default" parent="Theme.Steel"/>
 </resources>
