--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -9,7 +9,7 @@
     </style>
 
     <style name="TextViewFont" parent="android:Widget.TextView">
-        <item name="android:fontFamily">@font/chintzy</item>
+        <item name="android:fontFamily">@font/montserrat_extra_bold</item>
     </style>
 
     <style name="ChipStyle" parent="Widget.MaterialComponents.Chip.Choice">
