--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,3 +1,3 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <style name="Theme.Default" parent="Theme.MaterialComponents.DayNight.NoActionBar"/>
+    <style name="Theme.Default" parent="Theme.Material3.DayNight.NoActionBar"/>
 </resources>
