--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#0FDECB</color>
-    <color name="purple_500">#009688</color>
-    <color name="purple_700">#FF8716</color>
-    <color name="teal_200">#FFFF5AB8</color>
-    <color name="teal_700">#B64987</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="red">#FFFF0000</color>
+    <color name="green">#FF00FF00</color>
+    <color name="blue">#FF0000FF</color>
+    <color name="cyan">#FF00FFFF</color>
+    <color name="magenta">#FFFF00FF</color>
+    <color name="yellow">#FFFFFF00</color>
 
-    <color name="color_gray">#66000000</color>
+    <color name="grey">#66000000</color>
 
     <color name="steelPrimaryColor">#71797C</color>
     <color name="steelPrimaryLightColor">#ffffff</color>
