New Mars, Earth and System fragments with viewpager and indicators

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -31,4 +31,7 @@
     <color name="copperPrimaryTextColor">#6d4c41</color>
     <color name="copperSecondaryTextColor">#3e2723</color>
 
+    <color name="colorAccent">#FFD81860</color>
+    <color name="colorAccent40Alpha">#66D81860</color>
+
 </resources>
