--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,6 @@
 <resources>
     <dimen name="main_padding">10dp</dimen>
     <dimen name="indicator_size">30dp</dimen>
+    <dimen name="tab_label_text_size">15sp</dimen>
+    <dimen name="tab_label_ic_padding">10dp</dimen>
 </resources>
