--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -66,11 +66,13 @@
     </style>
 
     <style name="Theme.Steel" parent="Theme.Base">
+        <item name="colorSurface">@color/steelSecondaryTextColor</item>
         <item name="colorOnSurface">@color/steelPrimaryColor</item>
 
         <item name="colorPrimary">@color/steelPrimaryColor</item>
         <item name="colorPrimaryVariant">@color/steelPrimaryDarkColor</item>
         <item name="colorOnPrimary">@color/steelPrimaryTextColor</item>
+
 
         <item name="colorSecondary">@color/steelSecondaryColor</item>
         <item name="colorSecondaryVariant">@color/steelSecondaryDarkColor</item>
