--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,25 +13,115 @@
 
     <color name="grey">#66000000</color>
 
-    <color name="steelPrimaryColor">#71797C</color>
-    <color name="steelPrimaryLightColor">#ffffff</color>
-    <color name="steelPrimaryDarkColor">#9ea7aa</color>
-    <color name="steelSecondaryColor">#50575A</color>
-    <color name="steelSecondaryLightColor">#c1d5e0</color>
-    <color name="steelSecondaryDarkColor">#62757f</color>
-    <color name="steelPrimaryTextColor">#37474f</color>
-    <color name="steelSecondaryTextColor">#eceff1</color>
+    <!-- Material import BlueGray -->
+    <color name="md_bluegray_light_primary">#006684</color>
+    <color name="md_bluegray_light_onPrimary">#FFFFFF</color>
+    <color name="md_bluegray_light_primaryContainer">#BAE9FF</color>
+    <color name="md_bluegray_light_onPrimaryContainer">#001F2A</color>
+    <color name="md_bluegray_light_secondary">#4D616B</color>
+    <color name="md_bluegray_light_onSecondary">#FFFFFF</color>
+    <color name="md_bluegray_light_secondaryContainer">#D0E6F2</color>
+    <color name="md_bluegray_light_onSecondaryContainer">#081E27</color>
+    <color name="md_bluegray_light_tertiary">#5D5B7E</color>
+    <color name="md_bluegray_light_onTertiary">#FFFFFF</color>
+    <color name="md_bluegray_light_tertiaryContainer">#E3DFFF</color>
+    <color name="md_bluegray_light_onTertiaryContainer">#191836</color>
+    <color name="md_bluegray_light_error">#BA1B1B</color>
+    <color name="md_bluegray_light_errorContainer">#FFDAD4</color>
+    <color name="md_bluegray_light_onError">#FFFFFF</color>
+    <color name="md_bluegray_light_onErrorContainer">#410001</color>
+    <color name="md_bluegray_light_background">#FBFCFE</color>
+    <color name="md_bluegray_light_onBackground">#191C1E</color>
+    <color name="md_bluegray_light_surface">#FBFCFE</color>
+    <color name="md_bluegray_light_onSurface">#191C1E</color>
+    <color name="md_bluegray_light_surfaceVariant">#DCE3E8</color>
+    <color name="md_bluegray_light_onSurfaceVariant">#40484C</color>
+    <color name="md_bluegray_light_outline">#70787D</color>
+    <color name="md_bluegray_light_inverseOnSurface">#F0F1F3</color>
+    <color name="md_bluegray_light_inverseSurface">#2E3133</color>
+    <color name="md_bluegray_light_primaryInverse">#63D3FF</color>
+    <color name="md_bluegray_dark_primary">#63D3FF</color>
+    <color name="md_bluegray_dark_onPrimary">#003546</color>
+    <color name="md_bluegray_dark_primaryContainer">#004D65</color>
+    <color name="md_bluegray_dark_onPrimaryContainer">#BAE9FF</color>
+    <color name="md_bluegray_dark_secondary">#B4CAD6</color>
+    <color name="md_bluegray_dark_onSecondary">#1F333C</color>
+    <color name="md_bluegray_dark_secondaryContainer">#354A54</color>
+    <color name="md_bluegray_dark_onSecondaryContainer">#D0E6F2</color>
+    <color name="md_bluegray_dark_tertiary">#C6C3EA</color>
+    <color name="md_bluegray_dark_onTertiary">#2E2D4C</color>
+    <color name="md_bluegray_dark_tertiaryContainer">#454365</color>
+    <color name="md_bluegray_dark_onTertiaryContainer">#E3DFFF</color>
+    <color name="md_bluegray_dark_error">#FFB4A9</color>
+    <color name="md_bluegray_dark_errorContainer">#930006</color>
+    <color name="md_bluegray_dark_onError">#680003</color>
+    <color name="md_bluegray_dark_onErrorContainer">#FFDAD4</color>
+    <color name="md_bluegray_dark_background">#191C1E</color>
+    <color name="md_bluegray_dark_onBackground">#E1E2E4</color>
+    <color name="md_bluegray_dark_surface">#191C1E</color>
+    <color name="md_bluegray_dark_onSurface">#E1E2E4</color>
+    <color name="md_bluegray_dark_surfaceVariant">#40484C</color>
+    <color name="md_bluegray_dark_onSurfaceVariant">#C0C8CD</color>
+    <color name="md_bluegray_dark_outline">#8A9296</color>
+    <color name="md_bluegray_dark_inverseOnSurface">#191C1E</color>
+    <color name="md_bluegray_dark_inverseSurface">#E1E2E4</color>
+    <color name="md_bluegray_dark_primaryInverse">#006684</color>
+    <color name="md_bluegray_seed">#538AA2</color>
+    <color name="md_bluegrey_error">#BA1B1B</color>
 
-    <color name="copperPrimaryColor">#C2A690</color>
-    <color name="copperPrimaryLightColor">#ffffe4</color>
-    <color name="copperPrimaryDarkColor">#cbae82</color>
-    <color name="copperSecondaryColor">#8E7867</color>
-    <color name="copperSecondaryLightColor">#ffe97d</color>
-    <color name="copperSecondaryDarkColor">#c88719</color>
-    <color name="copperPrimaryTextColor">#6d4c41</color>
-    <color name="copperSecondaryTextColor">#3e2723</color>
 
-    <color name="colorAccent">#FFD81860</color>
-    <color name="colorAccent40Alpha">#66D81860</color>
+    <color name="md_orangegreen_light_primary">#7F5700</color>
+    <color name="md_orangegreen_light_onPrimary">#FFFFFF</color>
+    <color name="md_orangegreen_light_primaryContainer">#FFDEA9</color>
+    <color name="md_orangegreen_light_onPrimaryContainer">#281800</color>
+    <color name="md_orangegreen_light_secondary">#6E5C40</color>
+    <color name="md_orangegreen_light_onSecondary">#FFFFFF</color>
+    <color name="md_orangegreen_light_secondaryContainer">#F8DFBB</color>
+    <color name="md_orangegreen_light_onSecondaryContainer">#261904</color>
+    <color name="md_orangegreen_light_tertiary">#356A22</color>
+    <color name="md_orangegreen_light_onTertiary">#FFFFFF</color>
+    <color name="md_orangegreen_light_tertiaryContainer">#B5F399</color>
+    <color name="md_orangegreen_light_onTertiaryContainer">#022100</color>
+    <color name="md_orangegreen_light_error">#BA1B1B</color>
+    <color name="md_orangegreen_light_errorContainer">#FFDAD4</color>
+    <color name="md_orangegreen_light_onError">#FFFFFF</color>
+    <color name="md_orangegreen_light_onErrorContainer">#410001</color>
+    <color name="md_orangegreen_light_background">#FCFCFC</color>
+    <color name="md_orangegreen_light_onBackground">#1F1B16</color>
+    <color name="md_orangegreen_light_surface">#FCFCFC</color>
+    <color name="md_orangegreen_light_onSurface">#1F1B16</color>
+    <color name="md_orangegreen_light_surfaceVariant">#EEE0CF</color>
+    <color name="md_orangegreen_light_onSurfaceVariant">#4E4538</color>
+    <color name="md_orangegreen_light_outline">#807567</color>
+    <color name="md_orangegreen_light_inverseOnSurface">#F8EFE7</color>
+    <color name="md_orangegreen_light_inverseSurface">#34302A</color>
+    <color name="md_orangegreen_light_primaryInverse">#FBBB49</color>
+    <color name="md_orangegreen_dark_primary">#FBBB49</color>
+    <color name="md_orangegreen_dark_onPrimary">#442C00</color>
+    <color name="md_orangegreen_dark_primaryContainer">#604100</color>
+    <color name="md_orangegreen_dark_onPrimaryContainer">#FFDEA9</color>
+    <color name="md_orangegreen_dark_secondary">#DBC3A1</color>
+    <color name="md_orangegreen_dark_onSecondary">#3D2E16</color>
+    <color name="md_orangegreen_dark_secondaryContainer">#54442A</color>
+    <color name="md_orangegreen_dark_onSecondaryContainer">#F8DFBB</color>
+    <color name="md_orangegreen_dark_tertiary">#9AD680</color>
+    <color name="md_orangegreen_dark_onTertiary">#063900</color>
+    <color name="md_orangegreen_dark_tertiaryContainer">#1C520A</color>
+    <color name="md_orangegreen_dark_onTertiaryContainer">#B5F399</color>
+    <color name="md_orangegreen_dark_error">#FFB4A9</color>
+    <color name="md_orangegreen_dark_errorContainer">#930006</color>
+    <color name="md_orangegreen_dark_onError">#680003</color>
+    <color name="md_orangegreen_dark_onErrorContainer">#FFDAD4</color>
+    <color name="md_orangegreen_dark_background">#1F1B16</color>
+    <color name="md_orangegreen_dark_onBackground">#EAE1D8</color>
+    <color name="md_orangegreen_dark_surface">#1F1B16</color>
+    <color name="md_orangegreen_dark_onSurface">#EAE1D8</color>
+    <color name="md_orangegreen_dark_surfaceVariant">#4E4538</color>
+    <color name="md_orangegreen_dark_onSurfaceVariant">#D2C5B4</color>
+    <color name="md_orangegreen_dark_outline">#9B8F80</color>
+    <color name="md_orangegreen_dark_inverseOnSurface">#1F1B16</color>
+    <color name="md_orangegreen_dark_inverseSurface">#EAE1D8</color>
+    <color name="md_orangegreen_dark_primaryInverse">#7F5700</color>
+    <color name="md_orangegreen_seed">#D9BC91</color>
 
 </resources>
