--- a/app/src/main/res/drawable/ic_indicator_on.xml
+++ b/app/src/main/res/drawable/ic_indicator_on.xml
@@ -9,11 +9,11 @@
         android:fillColor="#FF0"/>
     -->
     <path
-        android:fillColor="?attr/colorPrimaryVariant"
+        android:fillColor="?attr/colorPrimary"
         android:pathData="M36,36 m-28,0 a28,28 0,1,1 56,0 a28,28 0,1,1 -56,0" />
     <path
         android:pathData="M36,36 m-28,0 a28,28 0,1,1 56,0 a28,28 0,1,1 -56,0"
         android:strokeWidth="10"
-        android:strokeColor="?attr/colorOnPrimarySurface"
+        android:strokeColor="?attr/colorPrimary"
         android:strokeLineJoin="round" />
 </vector>
