--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,3 +1,62 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <style name="Theme.Default" parent="Theme.Material3.DayNight.NoActionBar"/>
+
+    <style name="Theme.Base.BlueGray">
+        <item name="colorPrimary">@color/md_bluegray_dark_primary</item>
+        <item name="colorOnPrimary">@color/md_bluegray_dark_onPrimary</item>
+        <item name="colorPrimaryContainer">@color/md_bluegray_dark_primaryContainer</item>
+        <item name="colorOnPrimaryContainer">@color/md_bluegray_dark_onPrimaryContainer</item>
+        <item name="colorSecondary">@color/md_bluegray_dark_secondary</item>
+        <item name="colorOnSecondary">@color/md_bluegray_dark_onSecondary</item>
+        <item name="colorSecondaryContainer">@color/md_bluegray_dark_secondaryContainer</item>
+        <item name="colorOnSecondaryContainer">@color/md_bluegray_dark_onSecondaryContainer</item>
+        <item name="colorTertiary">@color/md_bluegray_dark_tertiary</item>
+        <item name="colorOnTertiary">@color/md_bluegray_dark_onTertiary</item>
+        <item name="colorTertiaryContainer">@color/md_bluegray_dark_tertiaryContainer</item>
+        <item name="colorOnTertiaryContainer">@color/md_bluegray_dark_onTertiaryContainer</item>
+        <item name="colorError">@color/md_bluegray_dark_error</item>
+        <item name="colorErrorContainer">@color/md_bluegray_dark_errorContainer</item>
+        <item name="colorOnError">@color/md_bluegray_dark_onError</item>
+        <item name="colorOnErrorContainer">@color/md_bluegray_dark_onErrorContainer</item>
+        <item name="android:colorBackground">@color/md_bluegray_dark_background</item>
+        <item name="colorOnBackground">@color/md_bluegray_dark_onBackground</item>
+        <item name="colorSurface">@color/md_bluegray_dark_surface</item>
+        <item name="colorOnSurface">@color/md_bluegray_dark_onSurface</item>
+        <item name="colorSurfaceVariant">@color/md_bluegray_dark_surfaceVariant</item>
+        <item name="colorOnSurfaceVariant">@color/md_bluegray_dark_onSurfaceVariant</item>
+        <item name="colorOutline">@color/md_bluegray_dark_outline</item>
+        <item name="colorOnSurfaceInverse">@color/md_bluegray_dark_inverseOnSurface</item>
+        <item name="colorSurfaceInverse">@color/md_bluegray_dark_inverseSurface</item>
+        <item name="colorPrimaryInverse">@color/md_bluegray_dark_primaryInverse</item>
+    </style>
+
+    <style name="Theme.Base.OrangeGreen">
+        <item name="colorPrimary">@color/md_orangegreen_dark_primary</item>
+        <item name="colorOnPrimary">@color/md_orangegreen_dark_onPrimary</item>
+        <item name="colorPrimaryContainer">@color/md_orangegreen_dark_primaryContainer</item>
+        <item name="colorOnPrimaryContainer">@color/md_orangegreen_dark_onPrimaryContainer</item>
+        <item name="colorSecondary">@color/md_orangegreen_dark_secondary</item>
+        <item name="colorOnSecondary">@color/md_orangegreen_dark_onSecondary</item>
+        <item name="colorSecondaryContainer">@color/md_orangegreen_dark_secondaryContainer</item>
+        <item name="colorOnSecondaryContainer">@color/md_orangegreen_dark_onSecondaryContainer</item>
+        <item name="colorTertiary">@color/md_orangegreen_dark_tertiary</item>
+        <item name="colorOnTertiary">@color/md_orangegreen_dark_onTertiary</item>
+        <item name="colorTertiaryContainer">@color/md_orangegreen_dark_tertiaryContainer</item>
+        <item name="colorOnTertiaryContainer">@color/md_orangegreen_dark_onTertiaryContainer</item>
+        <item name="colorError">@color/md_orangegreen_dark_error</item>
+        <item name="colorErrorContainer">@color/md_orangegreen_dark_errorContainer</item>
+        <item name="colorOnError">@color/md_orangegreen_dark_onError</item>
+        <item name="colorOnErrorContainer">@color/md_orangegreen_dark_onErrorContainer</item>
+        <item name="android:colorBackground">@color/md_orangegreen_dark_background</item>
+        <item name="colorOnBackground">@color/md_orangegreen_dark_onBackground</item>
+        <item name="colorSurface">@color/md_orangegreen_dark_surface</item>
+        <item name="colorOnSurface">@color/md_orangegreen_dark_onSurface</item>
+        <item name="colorSurfaceVariant">@color/md_orangegreen_dark_surfaceVariant</item>
+        <item name="colorOnSurfaceVariant">@color/md_orangegreen_dark_onSurfaceVariant</item>
+        <item name="colorOutline">@color/md_orangegreen_dark_outline</item>
+        <item name="colorOnSurfaceInverse">@color/md_orangegreen_dark_inverseOnSurface</item>
+        <item name="colorSurfaceInverse">@color/md_orangegreen_dark_inverseSurface</item>
+        <item name="colorPrimaryInverse">@color/md_orangegreen_dark_primaryInverse</item>
+    </style>
+
+    <style name="Theme.Default" parent="Theme.Base.BlueGray" />
 </resources>
