--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,8 @@
     <dimen name="indicator_size">10dp</dimen>
     <dimen name="tab_label_text_size">15sp</dimen>
     <dimen name="tab_label_ic_padding">10dp</dimen>
+    <dimen name="app_bar_height">180dp</dimen>
+    <dimen name="scrollview_text_margin">16dp</dimen>
+    <dimen name="text_margin">16dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
 </resources>
