--- a/app/src/main/res/layout/fragment_collapsing_toolbar.xml
+++ b/app/src/main/res/layout/fragment_collapsing_toolbar.xml
@@ -56,4 +56,11 @@
         app:layout_anchorGravity="bottom|end"
         app:srcCompat="@android:drawable/ic_dialog_email" />
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/button"
+        app:srcCompat="@android:drawable/ic_dialog_info"
+        app:layout_behavior="com.geekbrains.potd.demo.NestedBehavior" />
+
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
