--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,7 @@
     <color name="cyan">#FF00FFFF</color>
     <color name="magenta">#FFFF00FF</color>
     <color name="yellow">#FFFFFF00</color>
+    <color name="orange">#FF9100</color>
 
     <color name="grey">#66000000</color>
 
