Поддержка экрана закладок, работает кнопка сделать закладку в SystemFragment

--- a/app/src/main/res/layout/fragment_system.xml
+++ b/app/src/main/res/layout/fragment_system.xml
@@ -50,7 +50,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:contentDescription="@string/label_image_desc"
-        android:padding="20dp"
         app:layout_constraintBottom_toTopOf="@+id/description"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -102,5 +101,18 @@
             android:layout_marginEnd="7dp"
             android:src="@drawable/ic_indicator_off" />
     </LinearLayout>
+
+    <CheckBox
+        android:id="@+id/bookmark_checkbox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="@dimen/bookmark_button_margin"
+        android:layout_marginBottom="@dimen/bookmark_button_margin"
+        android:button="@drawable/ic_add_bookmark"
+        android:gravity="bottom|right|end"
+        android:minWidth="0dp"
+        android:minHeight="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
