--- a/app/src/main/res/menu/menu_bottom_navigation_view.xml
+++ b/app/src/main/res/menu/menu_bottom_navigation_view.xml
@@ -15,4 +15,9 @@
         android:icon="@drawable/ic_tabitem_mars"
         android:title="@string/label_tabitem_mars" />
 
+    <item
+        android:id="@+id/bottomViewBookmarks"
+        android:icon="@drawable/ic_bookmarks"
+        android:title="@string/label_tabitem_bookmarks" />
+
 </menu>
