--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,4 +8,7 @@
     <dimen name="scrollview_text_margin">16dp</dimen>
     <dimen name="text_margin">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="bookmark_type_icon_size">24dp</dimen>
+    <dimen name="bookmark_button_margin">15dp</dimen>
+    <dimen name="bookmarks_recycler_item_margins">5dp</dimen>
 </resources>
