--- a/app/src/main/res/drawable/ic_indicator_on.xml
+++ b/app/src/main/res/drawable/ic_indicator_on.xml
@@ -3,13 +3,8 @@
     android:height="@dimen/indicator_size"
     android:viewportWidth="72"
     android:viewportHeight="72">
-    <!--
-    <path android:pathData="M 0 0 h 72 v 72 h -72"
-        android:strokeWidth="1"
-        android:fillColor="#FF0"/>
-    -->
     <path
-        android:fillColor="?attr/colorPrimary"
+        android:fillColor="?attr/colorPrimaryContainer"
         android:pathData="M36,36 m-28,0 a28,28 0,1,1 56,0 a28,28 0,1,1 -56,0" />
     <path
         android:pathData="M36,36 m-28,0 a28,28 0,1,1 56,0 a28,28 0,1,1 -56,0"
